fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-240-77d56a1585.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function SvgDetail() {
  return (
    <Center aspectRatio="1" bg="$primaryBgLight" borderRadius="8px">
      <Image aspectRatio="1" boxSize="20px" src="/icons/plus.svg" />
    </Center>
  )
}"
