fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-241-e171ef72ce.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function SvgDetail() {
  return (
    <Center borderRadius="100px" flexDir="column" p="10px">
      <Box
        aspectRatio="1"
        bg="#000"
        boxSize="28px"
        maskImage="url(/icons/cog.svg)"
        maskPos="center"
        maskRepeat="no-repeat"
        maskSize="contain"
      />
    </Center>
  )
}"
