fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-242-5c198a8490.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function SvgDetail() {
  return (
    <Center borderRadius="100px" flexDir="column" p="10px">
      <Image aspectRatio="1" boxSize="28px" src="/icons/cog.svg" />
    </Center>
  )
}"
