fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-243-14366a47ff.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function DecorativeText() {
  return (
    <Text
      WebkitTextFillColor="transparent"
      bg="linear-gradient(-90deg, #6BB1F2 0%, #8235CA 100%)"
      bgClip="text"
      fontFamily="Pretendard"
      fontSize="36px"
      fontWeight="700"
      letterSpacing="-0.03em"
      lineHeight="47px"
    >
      16.8s
    </Text>
  )
}"
