fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-244-4ccea91f13.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function DecorativeText() {
  return (
    <Text
      WebkitTextStroke="3px #FFF"
      color="#4C05FF"
      fontFamily="Jalnan 2 TTF"
      fontSize="38px"
      fontWeight="400"
      letterSpacing="-0.02em"
      lineHeight="normal"
      paintOrder="stroke fill"
      textShadow="0 0 12px #7C70FF"
      wordBreak="keep-all"
    >
      홈페이지와 앱 제작
    </Text>
  )
}"
