fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-245-537356bcf4.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function DecorativeText() {
  return (
    <Text
      color="#000"
      fontFamily="Pretendard"
      fontSize="40px"
      fontWeight="500"
      letterSpacing="-0.05em"
      lineHeight="56px"
      wordBreak="keep-all"
    >
      <Text color="$primary" fontSize="42px" fontWeight="800" lineHeight="59px">
        온글
      </Text>
      과 함께라면
    </Text>
  )
}"
