fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-246-295f39e09b.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function DecorativeText() {
  return (
    <Text
      WebkitTextFillColor="transparent"
      bg="url(/images/데브파이브.png) center/cover no-repeat"
      bgClip="text"
      fontFamily="Jalnan Gothic TTF"
      fontSize="64px"
      fontWeight="400"
      letterSpacing="-0.05em"
      lineHeight="90px"
      wordBreak="keep-all"
    >
      데브파이브
    </Text>
  )
}"
